--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,6 @@ on:
       - renovate.json
       - poetry.lock
       - pyproject.toml
-      - '.github/**.md'
       - '.github/workflows/ci.yaml'
       - '.github/workflows/lib-check.yaml'
 
@@ -21,6 +20,8 @@ jobs:
     name: Tests
     uses: ./.github/workflows/ci.yaml
     secrets: inherit
+    permissions:
+      actions: write  # Needed to manage GitHub Actions cache
 
   release-libraries:
     name: Release libraries
@@ -41,14 +42,14 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v2
+    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v5.1.2
 
   release:
     name: Release charm
     needs:
       - ci-tests
       - build
-    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v2
+    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v5.1.2
     with:
       channel: 14/edge
       artifact-name: ${{ needs.build.outputs.artifact-name }}
