Conditionally skip backup tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,9 @@ target-version = ["py38"]
 
 # Linting tools configuration
 [tool.ruff]
+# preview and explicit preview are enabled for CPY001
+preview = true
+explicit-preview-rules = true
 target-version = "py38"
 src = ["src", "."]
 line-length = 99
