[DPE-2804] Conditionally skip backup tests (#310)
* Conditionally skip backup tests

* Wrong step output

* Bump libs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -115,8 +115,19 @@ jobs:
             echo Skipping unstable tests
             echo "mark_expression=and not unstable" >> "$GITHUB_OUTPUT"
           fi
+      - name: Select test secret usage
+        id: select-test-secrets
+        run: |
+          if [[ "${{ github.event.pull_request.head.repo.full_name }}" == "canonical/postgresql-k8s-operator" ]]
+          then
+            echo Running tests using secrets
+            echo "mark_secrets=" >> "$GITHUB_OUTPUT"
+          else
+            echo Skipping tests using secrets
+            echo "mark_secrets=and not uses_secrets" >> "$GITHUB_OUTPUT"
+          fi
       - name: Run integration tests
-        run: tox run -e ${{ matrix.tox-environment }} -- -m 'not ${{ matrix.exclude-mark }} ${{ steps.select-test-stability.outputs.mark_expression }}' --keep-models
+        run: tox run -e ${{ matrix.tox-environment }} -- -m 'not ${{ matrix.exclude-mark }} ${{ steps.select-test-secrets.outputs.mark_secrets }} ${{ steps.select-test-stability.outputs.mark_expression }}' --keep-models
         env:
           SECRETS_FROM_GITHUB: |
             {
