--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,15 +117,10 @@ jobs:
           fi
       - name: Select test secret usage
         id: select-test-secrets
+        if: ${{ github.event.pull_request.head.repo.full_name != 'canonical/postgresql-k8s-operator' }}
         run: |
-          if [[ "${{ github.event.pull_request.head.repo.full_name }}" == "canonical/postgresql-k8s-operator" ]]
-          then
-            echo Running tests using secrets
-            echo "mark_secrets=" >> "$GITHUB_OUTPUT"
-          else
-            echo Skipping tests using secrets
-            echo "mark_secrets=and not uses_secrets" >> "$GITHUB_OUTPUT"
-          fi
+          echo Skipping tests using secrets
+          echo "mark_secrets=and not uses_secrets" >> "$GITHUB_OUTPUT"
       - name: Run integration tests
         run: tox run -e ${{ matrix.tox-environment }} -- -m 'not ${{ matrix.exclude-mark }} ${{ steps.select-test-secrets.outputs.mark_secrets }} ${{ steps.select-test-stability.outputs.mark_expression }}' --keep-models
         env:
