--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,6 +4,13 @@
   "reviewers": ["dragomirp", "marceloneppel", "taurus-forever"],
   "packageRules": [
     // Later rules override earlier rules
+    {
+      "matchPackageNames": ["pydantic"],
+      "allowedVersions": "<2.0.0"
+    }, {
+      "matchPackageNames": ["python"],
+      "allowedVersions": "<3.11.0"
+    }
   ],
   "regexManagers": [
     {
