--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,8 +9,7 @@ on:
     paths-ignore:
       - 'tests/**'
       - 'docs/**'
-      - renovate.json
-      - poetry.lock
+      - .github/renovate.json5
       - pyproject.toml
       - '.github/workflows/ci.yaml'
       - '.github/workflows/lib-check.yaml'
