--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands_post =
 [testenv:format]
 description = Apply coding style standards to code
 commands_pre =
-    poetry install --only format
+    poetry install --only format --no-root
 commands =
     poetry lock --no-update
     poetry run ruff --fix {[vars]all_path}
@@ -46,7 +46,7 @@ allowlist_externals =
     {[testenv]allowlist_externals}
     find
 commands_pre =
-    poetry install --only lint,format
+    poetry install --only lint,format --no-root
 commands =
     poetry check --lock
     poetry run codespell {[vars]all_path}
@@ -61,7 +61,7 @@ set_env =
     juju2: LIBJUJU="2.9.44.1"
     juju3: LIBJUJU="3.2.0.1"
 commands_pre =
-    poetry install --only main,charm-libs,unit
+    poetry install --only main,charm-libs,unit --no-root
 commands =
     poetry run coverage run --source={[vars]src_path} \
         -m pytest -v --tb native -s {posargs} {[vars]tests_path}/unit
@@ -80,7 +80,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_backups.py
@@ -99,7 +99,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_charm.py
@@ -118,7 +118,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/new_relations/test_new_relations.py
@@ -137,7 +137,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_db.py
@@ -156,7 +156,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_db_admin.py
@@ -175,7 +175,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/ha_tests/test_replication.py
@@ -194,7 +194,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/ha_tests/test_self_healing.py
@@ -213,7 +213,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_password_rotation.py
@@ -232,7 +232,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_plugins.py
@@ -251,7 +251,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/test_tls.py
@@ -270,7 +270,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/ha_tests/test_upgrade.py
@@ -289,7 +289,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/ha_tests/test_upgrade_from_stable.py
@@ -309,7 +309,7 @@ pass_env =
 allowlist_externals =
     {[testenv:pack-wrapper]allowlist_externals}
 commands_pre =
-    poetry install --only integration
+    poetry install --only integration --no-root
     {[testenv:pack-wrapper]commands_pre}
 commands =
     poetry run pytest -v --tb native --log-cli-level=INFO -s --ignore={[vars]tests_path}/unit/ {posargs}
