--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ on:
       - .github/renovate.json5
   schedule:
     - cron: '53 0 * * *' # Daily at 00:53 UTC
-  # Triggered on push to branch "main" by .github/workflows/release.yaml
+  # Triggered on push to branch "main" by .github/workflows/release.yaml test
   workflow_call:
 
 jobs:
