--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
     timeout-minutes: 60
     steps:
       - name: Checkout
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Release charm libraries
@@ -41,14 +41,14 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v5.1.2
+    uses: canonical/data-platform-workflows/.github/workflows/build_charm_without_cache.yaml@v6.1.1
 
   release:
     name: Release charm
     needs:
       - ci-tests
       - build
-    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v5.1.2
+    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v6.1.1
     with:
       channel: 14/edge
       artifact-name: ${{ needs.build.outputs.artifact-name }}
