add spi extension

--- a/config.yaml
+++ b/config.yaml
@@ -215,6 +215,10 @@ options:
     default: false
     type: boolean
     description: Enable uuid_ossp extension.
+  plugin_spi_enable:
+    default: false
+    type: boolean
+    description: Enable spi extension.
   profile:
    description: |
       Profile representing the scope of deployment, and used to tune resource allocation.
