--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ pytest = "^7.4.3"
 pytest-mock = "^3.12.0"
 pytest-asyncio = "^0.21.1"
 psycopg2 = {version = "^2.9.9", extras = ["binary"]}
+parameterized = "^0.9.0"
 
 [tool.poetry.group.integration]
 optional = true
@@ -77,6 +78,8 @@ juju = "^3.2.2"
 psycopg2 = {version = "^2.9.9", extras = ["binary"]}
 boto3 = "^1.28.70"
 tenacity = "^8.2.3"
+ops = "^2.8.0"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
