--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ show_missing = true
 minversion = "6.0"
 log_cli_level = "INFO"
 asyncio_mode = "auto"
-markers = ["unstable"]
+markers = ["unstable", "juju2", "juju3"]
 
 # Formatting tools configuration
 [tool.black]
