--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ pydantic = "^1.10.13"
 pytest = "^7.4.3"
 pytest-mock = "^3.12.0"
 pytest-asyncio = "^0.21.1"
-psycopg2 = {version = "^2.9.9", extras = ["binary"]}
+psycopg2-binary = "^2.9.9"
 parameterized = "^0.9.0"
 
 [tool.poetry.group.integration]
@@ -75,7 +75,7 @@ pytest-operator = "^0.31.0"
 pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v6.3.3", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
 pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v6.3.3", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
 juju = "^3.2.2"
-psycopg2 = {version = "^2.9.9", extras = ["binary"]}
+psycopg2-binary = "^2.9.9"
 boto3 = "^1.33.1"
 tenacity = "^8.2.3"
 
