--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charms_with_cache.yaml@v6.3.3
+    uses: canonical/data-platform-workflows/.github/workflows/build_charms_with_cache.yaml@charmcraft-2.5-workaround
     permissions:
       actions: write  # Needed to manage GitHub Actions cache
 
